--- a/playbooks/playbook_673c3e5df85b32258c6ce864.yml
+++ b/playbooks/playbook_673c3e5df85b32258c6ce864.yml
@@ -1,22 +1,4 @@
----
-- name: Install and Start Nginx
-  hosts: webservers
-  become: yes  # Use sudo privileges
-  tasks:
-    - name: Install Nginx
-      ansible.builtin.yum:
-        name: nginx
-        state: present
-      when: ansible_os_family == "RedHat"
-
-    - name: Install Nginx (for Debian-based systems)
-      ansible.builtin.apt:
-        name: nginx
-        state: present
-      when: ansible_os_family == "Debian"
-
-    - name: Start and Enable Nginx Service
-      ansible.builtin.service:
-        name: nginx
-        state: started
-        enabled: yes
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: data3-storage-node
